feat(post): add post design

--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,5 +1,5 @@
 
-<div nzAlign="center">
+<div nzAlign="center" id="authenticate">
     <form nz-form [formGroup]="loginForm" class="login-form" (ngSubmit)="login()">
         <nz-form-item>
           <nz-form-control>
