--- a/src/app/authentication/login/login.component.css
+++ b/src/app/authentication/login/login.component.css
@@ -9,3 +9,10 @@
   .login-form-button {
     width: 100%;
   }
+
+  #authenticate {
+    margin-right: auto;
+    margin-left: auto;
+    width: 300px;
+    margin-top: 300px;
+  }
