--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -1,29 +1,5 @@
-:host > ::ng-deep .ant-layout {
-  margin-bottom: 48px;
-  height: 100%;
-  
-}
-
 .ant-layout {
   background-color: #e1e4f2;
-}
-
-:host ::ng-deep .trigger {
-  font-size: 18px;
-  line-height: 64px;
-  padding: 0 24px;
-  cursor: pointer;
-  transition: color .3s;
-}
-
-:host ::ng-deep .trigger:hover {
-  color: #1890ff;
-}
-
-:host ::ng-deep .logo {
-  height: 32px;
-  background: rgba(255, 255, 255, .2);
-  margin: 16px;
 }
 
 .ant-layout-sider {
@@ -57,3 +33,30 @@
 .remove-border {
   border: none;
 }
+
+.post-title {
+  font-size: 30px;
+  font-weight: bolder;
+  line-height: 35px;
+}
+
+.post-body {
+  font-size: 25px;
+  margin-bottom: 20px;
+  word-break: break-word;
+  line-height: 1.6;
+  font-size: 1.13rem;
+  color: #23242b;
+ }
+
+ .post-action-bar {
+   margin-top: 25px;
+ }
+
+.answer-form-action-button {
+   float: right;
+   margin: 10px 0px !important;
+ }
+
+
+ 
