feat(comment): add comment and answer creation

--- a/src/app/posts/answer-form/answer-form.component.html
+++ b/src/app/posts/answer-form/answer-form.component.html
@@ -10,6 +10,9 @@
       <span>Software developer Charisol</span>
     </div>
   </div>
-  <textarea [nzAutosize]="{ minRows: 8, maxRows: 10 }" placeholder="Write your answer" nz-input></textarea>
-  <button class="answer-form-action-button" nz-button nzType="primary">Submit</button>
+  <form nz-form [formGroup]="answerForm" class="login-form" (ngSubmit)="submitForm()">
+    <textarea [nzAutosize]="{ minRows: 8, maxRows: 10 }" formControlName="body" placeholder="Write your answer" nz-input></textarea>
+    <button nz-button class="answer-form-action-button" [nzLoading]="isSubmited" nz-button nzType="primary">Submit</button>
+  </form>
+  
 </nz-card>
