--- a/src/app/posts/comment-form/comment-form.component.html
+++ b/src/app/posts/comment-form/comment-form.component.html
@@ -1,4 +1,6 @@
 <div class="comment-answer-form">
-  <textarea row="4" placeholder="Write your answer" nz-input></textarea>
-  <button class="answer-form-action-button" nz-button nzType="primary">Submit</button>
+  <form nz-form [formGroup]="commentForm" class="login-form" (ngSubmit)="submitForm()">
+    <textarea row="3" formControlName="body" placeholder="Write your comment" nz-input></textarea>
+    <button class="answer-form-action-button" [nzLoading]="isSubmited" nz-button nzType="primary">Reply</button>
+  </form>
 </div>
