--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -66,7 +66,7 @@
 
           <div class="comment" [hidden]="!showComment">
             <app-comments *ngIf="post?.question?.id" [slug]="post?.question?.id" commentableType="Question"></app-comments>
-            <app-comment-form *ngIf="post?.question?.id" [questionId]="post?.question?.id" commentableType="Question"></app-comment-form>
+            <app-comment-form *ngIf="post?.question?.id" [slug]="post?.question?.id" commentableType="Question"></app-comment-form>
           </div>
         </nz-card>
 
