--- a/src/app/posts/answers/answers.component.html
+++ b/src/app/posts/answers/answers.component.html
@@ -1,66 +1,87 @@
 <nz-divider nzText="Answers" *ngIf="answers.length > 0"></nz-divider>
-<nz-card style="margin-bottom:25px;" *ngFor="let answer of answers" [attr.id]="'answer-' + answer?.id" [nzLoading]="loading">
-  <div nz-row class="card-user-info">
-    <div nz-col nzSpan="2">
-      <nz-avatar nzIcon="anticon anticon-user" [nzSrc]="answer?.author?.avatar?.thumb?.url"></nz-avatar>
-    </div>
-    <div nz-col nzXl="5">
-      <a>
-        <p class="card-user-name">{{answer?.author?.full_name}}</p>
-      </a>
-      <span>@{{answer?.author?.slug}}</span>
-    </div>
-    <div nz-col nzXl="17">
-      <small class="question-date">{{answer?.created_at | amTimeAgo}}</small>
-    </div>
-  </div>
-
-  <div class="answer-body-text" markdown [data]="answer?.body"></div>
-  <div nz-row nzGutter="48" class="post-action-bar">
-    <div nz-col nzSpan="12">
-      <button nz-button class="remove-border" nzType="primary" [nzSize]="large">
-        <i class="anticon anticon-like"></i> Like</button>
-      <button nz-button class="remove-border" nzType="default" [nzSize]="large">
-        <i class="anticon anticon-message"></i> reply ({{answer?.comments_count}})</button>
-      <!-- <button nz-button class="remove-border" nzType="default" [nzSize]="large">
-                    <i class="anticon anticon-plus-circle-o"></i> Follow </button> -->
+<div *ngFor="let answer of answers">
+  <nz-card style="margin-bottom:25px;" [attr.id]="'answer-' + answer?.id" [nzLoading]="loading">
+    <div nz-row class="card-user-info">
+      <div nz-col nzSpan="2">
+        <nz-avatar nzIcon="anticon anticon-user" [nzSrc]="answer?.author?.avatar?.thumb?.url"></nz-avatar>
+      </div>
+      <div nz-col nzXl="5">
+        <a>
+          <p class="card-user-name">{{answer?.author?.full_name}}</p>
+        </a>
+        <span>@{{answer?.author?.slug}}</span>
+      </div>
+      <div nz-col nzXl="17">
+        <small class="question-date">{{answer?.created_at | amTimeAgo}}</small>
+      </div>
     </div>
 
+    <div class="answer-body-text" markdown [data]="answer?.body"></div>
+    <div nz-row nzGutter="48" class="post-action-bar">
+      <div nz-col nzSpan="12">
+        <button nz-button class="remove-border" nzType="primary" [nzSize]="large">
+          <i class="anticon anticon-like"></i> Like</button>
+        <button nz-button class="remove-border" nzType="default" [nzSize]="large">
+          <i class="anticon anticon-message"></i> reply ({{answer?.comments_count}})</button>
+        <!-- <button nz-button class="remove-border" nzType="default" [nzSize]="large">
+                          <i class="anticon anticon-plus-circle-o"></i> Follow </button> -->
+      </div>
 
-    <div nz-col nzSpan="12" style="text-align: right;">
-      <nz-dropdown>
-        <a href="#" class="remove-border" nz-button nz-dropdown>
-          <i class="anticon anticon-down"></i>More</a>
-        <ul nz-menu>
-          <li nz-menu-item >
-            <a><i class="anticon anticon-edit"></i> Edit</a>
-          </li>
-          <li nz-menu-item (click)="deleteAnswer(answer?.id)">
-            <a><i class="anticon anticon-delete"></i> Delete</a>
-          </li>
-          <li nz-menu-item>
-            <a>
-              <i class="anticon anticon-message"></i> Invite to answer</a>
-          </li>
-          <li nz-menu-item>
-            <a>
-              <i class="anticon anticon-dashboard"></i> Post Activities</a>
-          </li>
-          <li nz-menu-item>
-            <a>
-              <i class="anticon anticon-exclamation-circle-o"></i> Report</a>
-          </li>
-        </ul>
-      </nz-dropdown>
-      <a href="#" class="remove-border" nz-button>
-        <i class="anticon anticon-book"></i> Save</a>
-      <a href="#" class="remove-border" nz-button>
-        <i class="anticon anticon-share-alt"></i> Share</a>
+
+      <div nz-col nzSpan="12" style="text-align: right;">
+        <nz-dropdown>
+          <a href="#" class="remove-border" nz-button nz-dropdown>
+            <i class="anticon anticon-down"></i>More</a>
+          <ul nz-menu>
+            <li nz-menu-item (click)="editAnswer(answer)">
+              <a>
+                <i class="anticon anticon-edit"></i> Edit</a>
+            </li>
+            <li nz-menu-item (click)="deleteAnswer(answer?.id)">
+              <a>
+                <i class="anticon anticon-delete"></i> Delete</a>
+            </li>
+            <li nz-menu-item>
+              <a>
+                <i class="anticon anticon-message"></i> Invite to answer</a>
+            </li>
+            <li nz-menu-item>
+              <a>
+                <i class="anticon anticon-dashboard"></i> Post Activities</a>
+            </li>
+            <li nz-menu-item>
+              <a>
+                <i class="anticon anticon-exclamation-circle-o"></i> Report</a>
+            </li>
+          </ul>
+        </nz-dropdown>
+        <a href="#" class="remove-border" nz-button>
+          <i class="anticon anticon-book"></i> Save</a>
+        <a href="#" class="remove-border" nz-button>
+          <i class="anticon anticon-share-alt"></i> Share</a>
+      </div>
     </div>
-  </div>
 
-  <app-comments *ngIf="answer?.id" [slug]="answer?.id"  commentableType="Answer"></app-comments>
-  <!-- comment or replies -->
-  <app-comment-form *ngIf="answer?.id" [slug]="answer?.id" commentableType="Answer"></app-comment-form>
+    <app-comments *ngIf="answer?.id" [slug]="answer?.id" commentableType="Answer"></app-comments>
+    <!-- comment or replies -->
+    <app-comment-form *ngIf="answer?.id" [slug]="answer?.id" commentableType="Answer"></app-comment-form>
+  </nz-card>
 
-</nz-card>
+  <nz-card style="margin-bottom:25px; display: none" [attr.id]="'answer-update-form-' + answer?.id" [nzLoading]="loading">
+    <div nz-row class="card-user-info">
+      <div nz-col nzSpan="2">
+        <nz-avatar nzIcon="anticon anticon-user" nzSrc="https://cdn.hashnode.com/res/hashnode/image/upload/w_70,h_70,c_thumb/v1532830409603/ByG0zjq4m.jpeg"></nz-avatar>
+      </div>
+      <div nz-col nzXl="8">
+        <a>
+          <p class="card-user-name">Malik Jaquan</p>
+        </a>
+        <span>Software developer Charisol</span>
+      </div>
+    </div>
+    <form nz-form [formGroup]="updateForm" (ngSubmit)="submitForm(answer)">
+      <textarea [nzAutosize]="{ minRows: 8, maxRows: 10 }" formControlName="body" [value]="answer?.body" placeholder="Update your answer" nz-input></textarea>
+      <button nz-button class="answer-form-action-button" [nzLoading]="isSubmited" nz-button nzType="primary">Update</button>
+    </form>
+  </nz-card>
+</div>
