--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div id="authenticate">
   <form nz-form [formGroup]="signupForm" class="login-form" (ngSubmit)="signup()">
     <nz-alert
@@ -47,4 +47,4 @@
       </nz-form-control>
     </nz-form-item>
   </form>
-</div>
+</div> -->
